--- a/index.html
+++ b/index.html
@@ -4,105 +4,53 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Operativni Sistemi - Windows 10</title>
+    <title>VPN</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <h1>Koraci pri instaliranju operativnog sistema Windows 10</h1>
-    <p>Evo nekoliko koraka koje biste trebali slijediti pri instaliranju operativnog sistema Windows 10:</p>
+    <h1>VPN</h1>
+    <p>Osnove koje trebate znati o VPN-u</p>
 
     <ol>
         <li id="item1">
-            Priprema računara<span id="span1">:<br> Prije instalacije Windows 10, potrebno je osigurati da vaše računalo ispunjava minimalne zahtjeve za instalaciju, uključujući procesor, RAM, tvrdi disk i grafičku karticu. Također provjerite da imate dovoljno slobodnog prostora na tvrdom disku.</span>
+            Sta je to VPN?<span id="span1">:<br> Virtualna privatna mreža (VPN) mehanizam je za stvaranje sigurne veze između računalnog uređaja i računalne mreže ili između dviju mreža, korištenjem nesigurnog komunikacijskog medija kao što je javni internet.</span>
         </li>
 
         <li id="item2">
-            Preuzmite instalacijsku datoteku<span id="span2">:<br> Preuzmite najnoviju verziju instalacijske datoteke operativnog sustava Windows 10 s Microsoftove službene web stranice.</span>
+            Sta može VPN?<span id="span2">:<br>VPN može proširiti pristup privatnoj mreži (onoj koja onemogućuje ili ograničava javni pristup) korisnicima koji nemaju izravan pristup njoj, kao što je uredska mreža koja omogućuje siguran pristup izvan stranice putem Interneta.</span>
         </li>
 
         <li id="item3">
-            Stvorite medij za instalaciju<span id="span3">:<br> Koristite USB stick ili DVD medij za stvaranje instalacijskog medija. Slijedite upute u softveru za stvaranje instalacijskog medija i odaberite željeni jezik i arhitekturu.</span>
+            Neke prednosti VPN-a<span id="span3">:<br> Prednosti VPN-a uključuju sigurnost, smanjene troškove namjenskih komunikacijskih linija i veću fleksibilnost za udaljene radnike. VPN-ovi se također koriste za zaobilaženje internetske cenzure. Enkripcija je uobičajena, iako nije sastavni dio VPN veze.</span>
         </li>
 
         <li id="item4">
-            Umetnite instalacijski medij u računalo<span id="span4">:<br>  Umetnite USB stick ili DVD medij u vaše računalo i pokrenite ga.</span>
+            Kako se VPN stvara<span id="span4">:<br>  VPN se stvara uspostavljanjem virtualne veze od točke do točke korištenjem protokola za tuneliranje preko postojećih mreža. VPN dostupan s javnog interneta može pružiti neke od prednosti privatne šire mreže (WAN).</span>
         </li>
 
         <li id="item5">
-            Odaberite medij za pokretanje sustava u BIOS-u ili UEFI-u<span id="span5">:<br> Ukoliko vaše računalo ne pokreće instalacijski medij, provjerite da li ste promijenili postavke BIOS-a kako bi prvo pokrenuli s medija.</span>
+           Vrste VPN-ova<span id="span5">:<br> Remote access ; Site-to-site ; Extranet-based site-to-site ; </span>
         </li>
 
         <li id="item6">
-            Pritisnite bilo koju tipku kako biste započeli instalaciju<span id="span6">:<br> Kada se pokrene instalacija, odaberite opciju "Instaliraj sada" te prihvatite uvjete licence.</span>
+            Remote access<span id="span6">:<br>Konfiguracija host-mreža analogna je povezivanju računala s lokalnom mrežom. Ova vrsta omogućuje pristup mreži poduzeća, kao što je intranet. To se može koristiti za udaljene radnike ili da se mobilnom radniku omogući pristup potrebnim alatima bez izlaganja javnom internetu.</span>
         </li>
 
         <li id="item7">
-            Odaberite jezik i postavke lokalizacije<span id="span7">:<br> Lista sa jezicima ima mnogo izbora, pa izaberite zeljeni jezik i nastavite.</span>
+            Site-to-Site<span id="span7">:<br> Konfiguracija od mjesta do mjesta povezuje dvije mreže. Ova konfiguracija proširuje mrežu preko geografski različitih ureda ili povezuje grupu ureda s instalacijom podatkovnog centra. Veza za međusobno povezivanje može se odvijati preko različite srednje mreže, kao što su dvije IPv6 mreže povezane preko IPv4 mreže.</span>
         </li>
 
         <li id="item8">
-            Kliknite "Instaliraj sada" da biste započeli instalaciju<span id="span8">:<br> Pokrece se program za instalaciju.</span>
+            Extranet-based site-to-site<span id="span8">:<br> U kontekstu konfiguracija od mjesta do mjesta, pojmovi intranet i ekstranet koriste se za opisivanje dva različita slučaja upotrebe. Intranet site-to-site VPN opisuje konfiguraciju u kojoj stranice povezane VPN-om pripadaju istoj organizaciji, dok ekstranet site-to-site VPN spaja stranice koje pripadaju više organizacija.</span>
         </li>
 
         <li id="item9">
-            Prihvatite licence i uvjete korištenja sustava Windows 10<span id="span9">:<br> Da bi se instalacija nastavila, potrebno je prihvatiti "Terms and conditions"</span>
+            VPN sustavi također se mogu klasificirati prema:<span id="span9">:<br>protokol tuneliranja koji se koristi za tuneliranje prometa ; lokacija priključne tačke tunela, npr. na rubu kupca ili mrežnog davatelja usluga ; vrsta topologije veza, kao što je site-to-site ili network-to-network ; pružene razine sigurnosti ; OSI sloj koji predstavljaju povezujućoj mreži, kao što su krugovi sloja 2 ili mrežna povezanost sloja 3.</span>
         </li>
 
         <li id="item10">
-            Odaberite tip instalacije (32-bitna ili 64-bitna)<span id="span10">:<br> Preporucljivo je odabrati operativni sistem u skladu sa sirinom procesora.</span>
-        </li>
-
-        <li id="item11">
-            Odaberite particiju na koju želite instalirati sustav Windows 10<span id="span11">:<br>  Ako se odlučite za čistu instalaciju, potrebno je particionirati tvrdi disk kako biste napravili novi particijski stol. Možete izraditi jednu particiju ili više njih, ovisno o potrebama.</span>
-        </li>
-
-        <li id="item12">
-            Po potrebi izvršite formatiranje particije<span id="span12">:<br> Ukoliko zelite potpuno cistu instalaciju, potrebno je formatirati particiju.</span>
-        </li>
-
-        <li id="item13">
-            Započnite s instalacijom sustava Windows 10<span id="span13">:<br> Nakon ovoga, instalacija bi trebala uspjesno poceti.</span>
-        </li>
-
-        <li id="item14">
-            Aktivirajte Windows 10 putem interneta ili telefonski<span id="span14">:<br> Ovaj korak nije obavezan, ali on otkloni natpis "Activate Windows"</span>
-        </li>
-
-        <li id="item15">
-            Instalirajte antivirusni program<span id="span15">:<br> Da biste zaštitili svoje računalo od virusa i drugih zlonamjernih programa, preporučuje se instaliranje antivirusnog programa.</span>
-        </li>
-
-        <li id="item16">
-            Instalirajte ostale programe koje koristite<span id="span16">:<br> Nakon instalacije operativnog sustava, potrebno je instalirati ostale programe koje koristite, kao što su preglednik, uredski programi, multimedijalni programi i igre.</span>
-        </li>
-
-        <li id="item17">
-            Ažurirajte Windows 10<span id="span17">:<br> Kako bi se osigurala najnovija sigurnosna i funkcionalna ažuriranja, preporučuje se redovito provjeravati i instalirati dostupna ažuriranja operativnog sustava.</span>
-        </li>
-
-        <li id="item18">
-            Stvorite sigurnosnu kopiju sustava<span id="span18">:<br> Preporučuje se stvoriti sigurnosnu kopiju vašeg sustava nakon što ga instalirate i konfigurirate. To vam može pomoći vratiti se na prethodno stanje u slučaju bilo kakvih problema.</span>
-        </li>
-
-        <li id="item19">
-            Postavite snažnu i sigurnu lozinku<span id="span19">:<br>  Da biste zaštitili svoj račun i podatke, postavite snažnu i sigurnu lozinku koju ćete redovito mijenjati.</span>
-        </li>
-
-        <li id="item20">
-            Konfigurirajte sustav za automatsko ažuriranje<span id="span20">:<br> Da biste bili sigurni da uvijek imate najnoviju verziju softvera, konfigurirajte svoj sustav za automatsko ažuriranje.</span>w
-        </li>
-
-        <li id="item21">
-            Uklonite nepotrebne programe<span id="span21">:<br> Da biste oslobodili prostor na tvrdom disku i poboljšali performanse računala, redovito uklanjajte programe koje ne koristite.</span>
-        </li>
-
-        <li id="item22">
-            Konfigurirajte postavke privatnosti<span id="span22">:<br> Ako želite kontrolirati kako se vaši osobni podaci koriste, konfigurirajte postavke privatnosti u operativnom sustavu Windows 10.</span>
-        </li>
-
-        <li id="item23">
-            Poboljšajte performanse računala<span id="span23">:<br> Postoje mnoge mogućnosti za poboljšanje performansi vašeg računala, kao što su optimizacija tvrdog diska, konfiguriranje postavki sustava i čišćenje registra. Potražite dodatne savjete i upute kako poboljšati performanse vašeg računala.</span>
+            Sigurnosni mehanizmi<span id="span10">:<br> VPN-ovi ne mogu online veze učiniti potpuno anonimnima, ali mogu povećati privatnost i sigurnost šifriranjem sve komunikacije između udaljenih lokacija putem otvorenog Interneta. Kako bi se spriječilo otkrivanje privatnih informacija ili njuškanje podataka, VPN-ovi obično dopuštaju samo autentificirani daljinski pristup korištenjem protokola tuneliranja i sigurne tehnike šifriranja.</span>
         </li>
 
     </ol>
