--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         </li>
 
     </ol>
-      <img class="windows" src="windows.png" alt="windows">
-        <img class="laptop" src="https://c.s-microsoft.com/en-us/CMSImages/windows10-laptop.png?version=2eb124e2-b087-ba9a-1b12-bc7fdfa4e15d" alt="">
+      
+        <img class="nordvpn" width="200" src="https://media.wired.co.uk/photos/606d9bc4307b8f0b37c724bb/4:3/w_2664,h_1998,c_limit/wired-nordvpn-2.jpg" alt="">
 
-        <a href="https://www.microsoft.com/en-us/software-download/windows10" target="_blank">
+        <a href="https://nordvpn.com/offer/?vpn=brand&gad_source=1&gclid=Cj0KCQiAyeWrBhDDARIsAGP1mWRnyUbetqdXwznpJ6x4iR542Whl0uNq9-zQ-PO3Q6TPKMEPtmvnxF0aAtRCEALw_wcB">
 
             <button>
                 Download
@@ -65,7 +65,7 @@
 
         </a>
 
-        <a style="margin-left:12px;" href="https://github.com/Dostovic/praksa" target="_blank">
+        <a style="margin-left:12px;" href="https://github.com/Dostovic/informatika" target="_blank">
 
             <button style="border-radius: 12px; background-color:green">
                 Kod
